kubernetes/apps/kube-system/cilium/app/ingress.yaml
---
# yaml-language-server: $schema=https://json.schemastore.org/ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble
  namespace: kube-system
spec:
  ingressClassName: internal
  rules:
    - host: "hubble.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hubble-ui
                port:
                  number: 80
